more changes made

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -29,8 +29,8 @@
     </div>
   </div>
 
-  <div class="graph-stats-container" style="padding: 20px;">
-    <img src="../../assets/stats-graph.png" style="width: 100%;">
+  <div class="graph-stats-container" style="padding: 20px; height: 280px;">
+   <app-chartdiagram></app-chartdiagram>
   </div>
 
   <div class="latest-transfer-container">
