--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -23,7 +23,7 @@
     </div>
     <div class="card" style="display: flex;gap:15px; position:relative; bottom: 90px">
       <p style="color:#fff; font-size: 30px; position: relative; bottom: 5px;"><ion-icon name="cash-outline"></ion-icon></p>
-      <p style="color:#fff; position: relative; top:12px;">Expenses
+      <p style="color:#fff; position: relative; top:12px;" (click)="navigate('/expenses')">Expenses
         <ion-icon name="arrow-forward-outline"></ion-icon>
       </p>
     </div>
@@ -36,7 +36,8 @@
   <div class="latest-transfer-container">
    <div style="display: flex; justify-content:  space-between; padding-left: 25px;">
     <p style="color:#fff; font-size: 18px;">Latest Transactions</p>
-    <p style="color:#fff; font-size: 30px; position: relative; bottom:17px; padding-right:10px;">
+    <p style="color:#fff; font-size: 30px; position: relative; bottom:17px; padding-right:10px;" 
+    (click)="navigate('/expenses')">
       <ion-icon name="arrow-forward-outline"></ion-icon>
     </p>
    </div>
