--- a/src/app/re-useable-components/side-menu/side-menu/side-menu.component.html
+++ b/src/app/re-useable-components/side-menu/side-menu/side-menu.component.html
@@ -6,12 +6,24 @@
     <div class="header-text" style="margin-top:15px;">Main Menu</div>
   </div>
   <ion-list lines="none">
-    <ion-item>
-      <ion-icon name="person-circle-outline"></ion-icon>
+    <ion-item (click)="navigate('/profile')">
+      <ion-icon slot="start" name="person-circle-outline"></ion-icon>
       <ion-label>Profile</ion-label>
     </ion-item>
+    <ion-item (click)="navigate('/notifications')">
+      <ion-icon slot="start" name="mail-outline"></ion-icon>
+      <ion-label>Notifications</ion-label>
+    </ion-item>
+    <ion-item (click)="navigate('/expenses')">
+      <ion-icon slot="start" name="cash-outline"></ion-icon>
+      <ion-label>Expenses</ion-label>
+    </ion-item>
+    <ion-item (click)="navigate('/analytics')">
+      <ion-icon slot="start" name="pie-chart-outline"></ion-icon>
+      <ion-label>Analytics</ion-label>
+    </ion-item>
     <ion-item (click)="logout()">
-      <ion-icon name="log-out-outline"></ion-icon>
+      <ion-icon slot="start" name="log-out-outline"></ion-icon>
       <ion-label>Logout</ion-label>
     </ion-item>
   </ion-list>
