--- a/src/app/re-useable-components/tabs/tabs/tabs.component.html
+++ b/src/app/re-useable-components/tabs/tabs/tabs.component.html
@@ -12,6 +12,10 @@
       <ion-icon name="cash-outline"></ion-icon>
       <ion-label>Expenses</ion-label>
     </ion-tab-button>
+    <ion-tab-button tab="notifications">
+      <ion-icon name="mail-outline"></ion-icon>
+      <ion-label>Notifications</ion-label>
+    </ion-tab-button>
     <ion-tab-button tab="settings">
       <ion-icon name="settings-outline"></ion-icon>
       <ion-label>Settings</ion-label>
