--- a/src/app/pages/authentications/sign-in/sign-in/sign-in.component.html
+++ b/src/app/pages/authentications/sign-in/sign-in/sign-in.component.html
@@ -1,39 +1,56 @@
 <ion-content class="ion-padding">
-  <div class="content" style="text-align: center; align-items: center; justify-content: center; margin-top: 50px;">
-   <div class="title">
-    <h1 style="color:#000000; font-weight: bold; font-size: 55px; font-style: italic;">MoneyMate</h1>
-     <p style="color:#000; font-weight: bold; font-size: 35px;">Welcome Back</p>
-     <p style="color:grey; font-size:16px; font-weight: 300;position: relative; bottom:22px;">Please Sign In to manage your finances</p>
-   </div>
-  </div>
-  <div class="input-container">
-   <div class="user-input">
-     <div class="input-card">
-       <ion-input style="position: relative; bottom:5px;" placeholder="Email"></ion-input>
-     </div>
-   </div>
-   <div class="user-input">
-     <div class="input-card" style="display: flex; justify-content: space-between;">
-       <ion-input 
-         style="position: relative; bottom:5px;" 
-         [type]="showPassword ? 'text' : 'password'" 
-         placeholder="Password">
-       </ion-input>
-       <p style="font-size: 25px;" (click)="togglePassword()" style="padding-bottom: 5px;">
-         <ion-icon [name]="showPassword ? 'eye-off-outline' : 'eye-outline'"></ion-icon>
-       </p>
-     </div>
-   </div>  
-   <ion-checkbox>Remember me</ion-checkbox>
-   <div class="action-btn-container" style="margin-top: 20px;">  
-     <ion-button expand="block" class="custom-btn" (click)="login()">Sign In</ion-button>
-   </div>
-   
-   <div class="text-container" style="text-align: center; align-items: center;">
-     <p style="color:grey; font-size: 14px; font-weight: 300;">Don't you have an account? 
-       <span style="color:#000; text-decoration: underline;" (click)="navigate('/sign-up')">Sign-Up</span>
-     </p>
-   </div>
- </div>
- </ion-content>
- 
+  <form [formGroup]="signInForm">
+    <div class="content" style="text-align: center; align-items: center; justify-content: center; margin-top: 50px;">
+      <div class="title">
+        <h1 style="color:#000000; font-weight: bold; font-size: 55px; font-style: italic;">MoneyMate</h1>
+        <p style="color:#000; font-weight: bold; font-size: 35px;">Welcome Back</p>
+        <p style="color:grey; font-size:16px; font-weight: 300;position: relative; bottom:22px;">Please Sign In to manage your finances</p>
+      </div>
+    </div>
+
+    <div class="input-container">
+      <div class="user-input">
+        <div class="input-card">
+          <ion-input 
+            style="position: relative; bottom:5px;" 
+            placeholder="Email"
+            formControlName="email"
+            type="email">
+          </ion-input>
+        </div>
+        <p *ngIf="f['email'].touched && f['email'].errors?.['required']" style="color: red;">Email is required</p>
+        <p *ngIf="f['email'].touched && f['email'].errors?.['email']" style="color: red;">Enter a valid email</p>
+      </div>
+
+      <div class="user-input">
+        <div class="input-card" style="display: flex; justify-content: space-between;">
+          <ion-input 
+            style="position: relative; bottom:5px;" 
+            [type]="showPassword ? 'text' : 'password'" 
+            placeholder="Password"
+            formControlName="password">
+          </ion-input>
+          <p style="font-size: 25px;" (click)="togglePassword()" style="padding-bottom: 5px;">
+            <ion-icon [name]="showPassword ? 'eye-off-outline' : 'eye-outline'"></ion-icon>
+          </p>
+        </div>
+        <p *ngIf="f['password'].touched && f['password'].errors?.['required']" style="color: red;">Password is required</p>
+        <p *ngIf="f['password'].touched && f['password'].errors?.['minlength']" style="color: red;">
+          Password must be at least 6 characters
+        </p>
+      </div>  
+
+      <ion-checkbox>Remember me</ion-checkbox>
+
+      <div class="action-btn-container" style="margin-top: 20px;">  
+        <ion-button expand="block" class="custom-btn" (click)="login()">Sign In</ion-button>
+      </div>
+
+      <div class="text-container" style="text-align: center; align-items: center;">
+        <p style="color:grey; font-size: 14px; font-weight: 300;">Don't you have an account? 
+          <span style="color:#000; text-decoration: underline;" (click)="navigate('/sign-up')">Sign-Up</span>
+        </p>
+      </div>
+    </div>
+  </form>
+</ion-content>
