add expense added

--- a/src/app/pages/authentications/sign-up/sign-up/sign-up.component.html
+++ b/src/app/pages/authentications/sign-up/sign-up/sign-up.component.html
@@ -9,10 +9,10 @@
     </div>
 
     <div class="input-container">
-      <!-- Full Name -->
+      <!-- Username -->
       <div class="input-card">
-        <ion-input formControlName="fullName" placeholder="Full Name"></ion-input>
-        <ion-text color="danger" *ngIf="f['fullName'].touched && f['fullName'].errors?.['required']">
+        <ion-input formControlName="username" placeholder="Username"></ion-input>
+        <ion-text color="danger" *ngIf="f['username'].touched && f['username'].errors?.['required']">
           Full name is required
         </ion-text>
       </div>
