--- a/src/app/pages/edit-profile/edit-profile/edit-profile.component.html
+++ b/src/app/pages/edit-profile/edit-profile/edit-profile.component.html
@@ -5,11 +5,18 @@
   <div class="heading" style="display: flex; justify-content: center; align-items: center; text-align: center; margin-top: 40px; gap: 10px;">
     <div class="circle" style="display: flex; justify-content: center; align-items: center; border-radius: 50%; height: 100px; width: 100px; background-color: #333;"
     (click)="presentActionSheet()">
-      <p style="color: #fff; font-weight: bold; margin: 0;">LH</p>
+      <p style="color: #fff; font-weight: bold; margin: 0;">
+        {{user.username.charAt(0) || 'u'}}
+      </p>
     </div>
-    <p style="color:#000; font-weight: bold; font-size: 22px;">Lungile Hlakanyane <br>
-      <span style="color:#333; font-size: 13px;">Joined March 20, 2025</span>
+
+    <p style="color:#000; font-weight: bold; font-size: 22px;">
+      {{ user.username }} <br>
+      <span style="color:#333; font-size: 13px;">
+        Joined {{ user.createdAt | date:'MMMM d, y' }}
+      </span>
     </p>
+
   </div>
 
   <div class="options-container">
@@ -17,19 +24,19 @@
     <div style="display: flex; gap:10px;">
       <ion-icon name="person-outline"></ion-icon>
       <ion-item style="position: relative; bottom: 12px;">
-        <ion-input label="" placeholder="Full Name"></ion-input>
+        <ion-input label="" placeholder="Username"  [(ngModel)]="user.username"></ion-input>
       </ion-item>
     </div>
     <div style="display: flex; gap:10px;">
       <ion-icon name="mail-outline"></ion-icon>
       <ion-item style="position: relative; bottom: 12px;">
-        <ion-input label="" placeholder="Email"></ion-input>
+        <ion-input label="" placeholder="Email" [(ngModel)]="user.email"></ion-input>
       </ion-item>
     </div>
     <div style="display: flex; gap:10px;">
       <ion-icon name="call-outline"></ion-icon>
       <ion-item style="position: relative; bottom: 12px;">
-        <ion-input label="" placeholder="Phone Number"></ion-input>
+        <ion-input label="" placeholder="Phone Number" [(ngModel)]="user.phoneNumber"></ion-input>
       </ion-item>
     </div>
     <div style="display: flex; gap:27px;">
@@ -51,10 +58,10 @@
     </div>
     <p class="heading text" style="color:#000; font-weight: bold; font-size: 22px;">Notifications</p>
     <div style="margin-bottom:10px;">
-      <ion-toggle justify="space-between">Push Notifications</ion-toggle>
+      <ion-toggle justify="space-between" (ionChange)="togglePushNotifications($event)">Push Notifications</ion-toggle>
     </div>
     <div>
-      <ion-toggle justify="space-between">SMS Notifications</ion-toggle>
+      <ion-toggle justify="space-between" (ionChange)="toggleSmsNotifications($event)">SMS Notifications</ion-toggle>
     </div>
     <div class="theme-container" style="position: relative; top:20px;">
       <p class="heading text" style="color:#000; font-weight: bold; font-size: 22px;">Theme</p>
