terms and policies added

--- a/src/app/pages/analytics/analytics/analytics.component.html
+++ b/src/app/pages/analytics/analytics/analytics.component.html
@@ -13,12 +13,7 @@
   </div>
 
   <div class="analytics-container">
-    <div class="pie-chart"></div>
-    <div class="legend" style="margin-top:30px;">
-      <div class="legend-item"><div class="box entertainment"></div> Entertainment (50%)</div>
-      <div class="legend-item"><div class="box bills"></div> Bills (25%)</div>
-     <div class="legend-item"><div class="box groceries"></div> Groceries (25%)</div>
-    </div>
+    <canvas id="categoryPieChart"></canvas>
   </div>
 
   <div class="action-btn-container" style="margin-top:30px;display:flex; gap:10px;">
